--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </h3>
 
   <form action="envia.php" name="form1" method="post"></form>
-  <table width="100%" border="0" cellspacing="5">
+  <table width="100%" border="0" cellspacing="5" background="img/fundo.jpg">
     <tbody>
       <tr>
         <td width="13%">Nome</td>
